--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-template",
+  "name": "travel-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,11 +17,11 @@
     "@types/react-dom": "18.2.7",
     "dompurify": "^3.0.5",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "^14.0.4",
     "msw": "^2.0.11",
-    "next": "13.5.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-to-pdf": "^1.0.1",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
